--- a/section_publications.tex
+++ b/section_publications.tex
@@ -3,6 +3,6 @@
 \begin{itemize}
 	\item{
 	            \textbf{Hossein Beheshti}, Sajad Daei, Farzan Haddadi, ``Adaptive Recovery of Dictionary-sparse Signals using Binary Measurements'',
-	            \emph{EURASIP Journal on Advances in Signal Processing -- Revise}
+	            \emph{EURASIP J. Adv. Signal Process. 2022, 49 (2022).}
 	      }
 \end{itemize}
