--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -20,8 +20,7 @@
 	\linkedin{hosseinbeheshti} \\
 	\smartphone{(+98) 912-488-96-64}
 	\email{h.beheshti92@gmail.com} \\
-	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}\\
-	\infos{23 Feb 1992, Tehran, Iran}
+	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}
 }
 
 \begin{document}
@@ -32,53 +31,33 @@
 %----------------------------------------------------------------------------------------
 %	ADDRESSEE AND GREETING
 %----------------------------------------------------------------------------------------
-
-\begin{tabular}{@{} l}
-	Mrs.\ XXX           \\
-	Recruitment Officer \\
-	The Corporation     \\
-	123 Pleasant Lane   \\
-	City, State 12345
-\end{tabular}
-
 \bigskip % Vertical whitespace
+Dear Hiring Manager,
 
-Dear Mrs.\ XXX,
+\bigskip 
 
-\bigskip % Vertical whitespace
+I submit this application to express my sincere interst in the \textbf{Research Assistant in FPGA Design and Prototyping} position.
 
-%----------------------------------------------------------------------------------------
-%	LETTER CONTENT
-%----------------------------------------------------------------------------------------
+I reviewed the requirements of the job openning and I believe my candidacy in an excellent fit for this position. Some of the key requirements tha I have extensive experience with include:
 
-PARAGRAPH ONE: State the reason for the letter, name the position or 
-type of work you are applying for and identify the source from which 
-you learned of the opening (i.e. career development center, newspaper, 
-employment service, personal contact).
+\begin{itemize}
+	\item \textbf{Programming Skills}:
+	      MATLAB, C/C++, VHDL, Verilog, SystemVerilog, Qt, \LaTeX, Git
+	\item \textbf{MATLAB}:
+	      Mfile programming, SIMULINK, DSP toolbox, Optimization toolbox, Parallel processing
+	\item \textbf{Hardware Design Environments}:
+	      VIVADO, Vitis, XILINX Model Composer, HLS, petalinux
+	\item \textbf{Other}:
+	      Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, Docker
+\end{itemize}
 
-PARAGRAPH TWO: Indicate why you are interested in the position, the 
-company, its products, services - above all, stress what you can do 
-for the employer. If you are a recent graduate, explain how your 
-academic background makes you a qualified candidate for the position. 
-If you have practical work experience, point out specific achievements 
-or unique qualifications. Try not to repeat the same information the 
-reader will find in the resume. Refer the reader to the enclosed resume 
-or application which summarizes your qualifications, training, and 
-experiences. The purpose of this section is to strengthen your resume 
-by providing details which bring your experiences to life.
+I have extensive signal processing experiences both at the system level design (using MATLAB) and at the implementation phase (using System Generator and etc.), I think I properly fits the above-mentioned vacancy according to the job description.
 
-PARAGRAPH THREE: Request a personal interview and indicate your 
-flexibility as to the time and place. Repeat your phone number in 
-the letter and offer assistance to help in a speedy response. For 
-example, state that you will be in the city where the company is 
-located on a certain date and would like to set up an interview. 
-Alternatively, state that you will call on a certain date to set 
-up an interview. End the letter by thanking the employer for 
-taking time to consider your credentials.
 
-\bigskip % Vertical whitespace
+Thank you in advance for reviewing my candidacy for this position.
+\bigskip 
 Best regards,
-\vspace{50pt} % Vertical whitespace
+\vspace{50pt}
 Hossein Beheshti 
 \end{document}
 
