--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -11,6 +11,7 @@
 % Hossein Beheshti
 
 \documentclass[localFont]{awesome-source-cv} %alternative
+\usepackage[T1]{fontenc}
 
 \name{Hossein}{Beheshti}
 
@@ -32,13 +33,17 @@
 %	ADDRESSEE AND GREETING
 %----------------------------------------------------------------------------------------
 \bigskip % Vertical whitespace
+{\fontfamily{ptm}\selectfont 
+Text in Times%
 Dear Hiring Manager,
 
 \bigskip 
 
-I submit this application to express my sincere interst in the \textbf{Research Assistant in FPGA Design and Prototyping} position.
+I submit this application to express my sincere interest in the \textbf{Research Assistant in FPGA Design and Prototyping} position.
 
-I reviewed the requirements of the job openning and I believe my candidacy in an excellent fit for this position. Some of the key requirements tha I have extensive experience with include:
+In the previous role, I was responsible for designing digital signal processing algorithms with MATLAB and implementing them on FPGA.
+
+I reviewed the requirements of the job opening, and I believe my candidacy is an excellent fit for this position. Some of the essential requirements that I have extensive experience with include:
 
 \begin{itemize}
 	\item \textbf{Programming Skills}:
@@ -51,13 +56,13 @@ I reviewed the requirements of the job openning and I believe my candidacy in an
 	      Clock Domain Crossing, Timing Closure, Tcl scripting, GitLab CI/CD, Docker
 \end{itemize}
 
-I have extensive signal processing experiences both at the system level design (using MATLAB) and at the implementation phase (using System Generator and etc.), I think I properly fits the above-mentioned vacancy according to the job description.
+I have extensive signal processing experiences both at the system level design (using MATLAB) and at the implementation phase (using System Generator, etc.); I think I fit the vacancy mentioned earlier according to the job description.
 
-
-Thank you in advance for reviewing my candidacy for this position.
+Thank you in advance for reviewing my candidacy for this position.\\
 \bigskip 
-Best regards,
+Best regards,\\
 \vspace{50pt}
-Hossein Beheshti 
+Hossein Beheshti\\
+}
 \end{document}
 
