--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -34,7 +34,6 @@
 %----------------------------------------------------------------------------------------
 \bigskip % Vertical whitespace
 {\fontfamily{ptm}\selectfont 
-Text in Times%
 Dear Hiring Manager,
 
 \bigskip 
@@ -61,7 +60,7 @@ I have extensive signal processing experiences both at the system level design (
 Thank you in advance for reviewing my candidacy for this position.\\
 \bigskip 
 Best regards,\\
-\vspace{50pt}
+\bigskip 
 Hossein Beheshti\\
 }
 \end{document}
