--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -54,10 +54,10 @@ I reviewed the requirements of the job openning and I believe my candidacy in an
 I have extensive signal processing experiences both at the system level design (using MATLAB) and at the implementation phase (using System Generator and etc.), I think I properly fits the above-mentioned vacancy according to the job description.
 
 
-Thank you in advance for reviewing my candidacy for this position.
+Thank you in advance for reviewing my candidacy for this position.\\
 \bigskip 
-Best regards,
-\vspace{50pt}
-Hossein Beheshti 
+Best regards,\\
+\bigskip 
+Hossein Beheshti \\
 \end{document}
 
