--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -36,7 +36,7 @@ Dear Hiring Manager,
 
 \bigskip 
 
-I submit this application to express my sincere interest in the \textbf{Research Assistant in FPGA Design and Prototyping} position.
+I submit this application to express my sincere interest in the \textbf{FPGA Engineer/Senior FPGA Engineer} position.
 
 In the previous role, I was responsible for designing digital signal processing algorithms with MATLAB and implementing them on FPGA.
 
