--- a/section_projects.tex
+++ b/section_projects.tex
@@ -1,6 +1,10 @@
 \sectionTitle{Projects}{\faCode}
 
 \begin{itemize}
+	\item \textbf{FPGA RSA core}
+	      \begin{itemize}
+		      \item RSA implementation with modified Montgomery core
+	      \end{itemize}
 	\item \textbf{Broadband wireless over fiber}
 	      \begin{itemize}
 		      \item Implementation of DSP cores on ZCU208 (RFSoC)
