--- a/section_publications.tex
+++ b/section_publications.tex
@@ -5,4 +5,8 @@
 	            \textbf{Hossein Beheshti}, Sajad Daei, Farzan Haddadi, ``Adaptive Recovery of Dictionary-sparse Signals using Binary Measurements'',
 	            \emph{EURASIP J. Adv. Signal Process. 2022, 49 (2022).}
 	      }
+	\item{
+	            Shirin Hussein, \textbf{Hossein Beheshti}, Chin-Pang Liu, ``Real time experiment of Digital Single Sideband Frequency Translation for Transmission of RF MIMO Signals over Fiber'',
+	            \emph{IEEE Transactions on Microwave Theory and Techniques} --submitted
+	      }
 \end{itemize}
