Update section_headline.tex, CV.tex, section_experiences.tex, .gitlab-ci.yml

--- a/CV.tex
+++ b/CV.tex
@@ -14,7 +14,7 @@
 
 \name{Hossein}{Beheshti}
 
-\tagline{FPGA Design Engineer}
+\tagline{FPGA Engineer}
 \socialinfo{
 	\email{h.beheshti92@gmail.com} \\
 	\smartphone{(+98) 91 24 88 96 64} \\
