--- a/section_headline.tex
+++ b/section_headline.tex
@@ -3,7 +3,7 @@
 \addtocounter{experience_years}{-2013}
 
 \par{
-    FPGA Design Engineer with \the\value{experience_years}{\small +} years of experience
+    FPGA Engineer with \the\value{experience_years}{\small +} years of experience
     in the telecommunication industry. Design and simulate digital signal processing
     algorithms with MATLAB and implement algorithms on FPGA.\\
     Create the product's central architecture and roadmap and direct the development process.
