--- a/CV.tex
+++ b/CV.tex
@@ -17,10 +17,10 @@
 \tagline{FPGA Engineer}
 \socialinfo{
 	\email{h.beheshti92@gmail.com} \\
-	\smartphone{(+98) 91 24 88 96 64} \\
+	\smartphone{(+44) 744 26 28 771} \\
 	\github{HosseinBeheshti} \\
 	\linkedin{hosseinbeheshti} \\
-	\address{Unit 3, No. 26, Jafari St, East Tehranpars, Tehran, Iran}
+	\address{EH49 7EQ, United Kingdom}
 }
 
 \begin{document}
