--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -2,7 +2,7 @@
 
 \begin{experiences}
 	\experience
-	{Present} {FPGA Engineer, Product Owner}{SAMIM group}{Tehran,Iran}
+	{Dec 2022} {FPGA Engineer, Product Owner}{SAMIM group}{Tehran,Iran}
 	{Aug 2018} {
 		\begin{itemize}
 			\item Created and maintained product roadmap, planned 3-week sprints,
