--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 	\smartphone{(+44) 744 26 28 771} \\
 	\github{HosseinBeheshti} \\
 	\linkedin{hosseinbeheshti} \\
-	\address{EH49 7EQ, United Kingdom}
+	\address{Linlithgow, United Kingdom}
 }
 
 \begin{document}
