--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -2,6 +2,17 @@
 
 \begin{experiences}
 	\experience
+	{now} {FPGA Engineer}{Calnex Solutions plc}{Linlithgow, UK}
+	{Dec 2022} {
+		\begin{itemize}
+			\item 
+		\end{itemize}
+	}
+	{Networking, Embedded System, Agile Development}
+	
+	\emptySeparator
+	
+	\experience
 	{Dec 2022} {FPGA Engineer, Product Owner}{SAMIM group}{Tehran,Iran}
 	{Aug 2018} {
 		\begin{itemize}
