--- a/section_experiences.tex
+++ b/section_experiences.tex
@@ -2,7 +2,7 @@
 
 \begin{experiences}
 	\experience
-	{now} {FPGA Engineer}{Calnex Solutions plc}{Linlithgow, UK}
+	{now} {FPGA Engineer}{Calnex Solutions PLC}{Linlithgow, UK}
 	{Dec 2022} {
 		\begin{itemize}
 			\item 
